# codex

./: README.md
.github/workflows/: bazel.yml  ci.yml  rust-ci.yml
codex-rs/: deny.toml
codex-rs/app-server/: README.md
codex-rs/app-server/src/: bespoke_event_handling.rs  codex_message_processor.rs  message_processor.rs
codex-rs/cloud-requirements/: Cargo.toml
codex-rs/cloud-requirements/src/: lib.rs
codex-rs/core/: config.schema.json  gpt-5.2-codex_prompt.md  gpt_5_1_prompt.md  gpt_5_2_prompt.md  gpt_5_codex_prompt.md  models.json  prompt.md  prompt_with_apply_patch_instructions.md
codex-rs/core/src/: auth.rs  client.rs  codex.rs  codex_delegate.rs  connectors.rs  environment_context.rs  error.rs  exec.rs  features.rs  git_info.rs  landlock.rs  lib.rs  mcp_connection_manager.rs  model_provider_info.rs  proposed_plan_parser.rs  session_share.rs  stream_events_utils.rs  token_data.rs
codex-rs/debug-client/src/: reader.rs
codex-rs/docs/: linux_sandbox.md  protocol_v1.md
codex-rs/exec/src/: event_processor_with_human_output.rs  event_processor_with_jsonl_output.rs
codex-rs/exec/tests/: event_processor_with_json_output.rs
codex-rs/linux-sandbox/: README.md
codex-rs/linux-sandbox/scripts/: test_linux_sandbox.sh
codex-rs/linux-sandbox/src/: bwrap.rs  lib.rs  linux_run_main.rs
codex-rs/mcp-server/src/: codex_tool_runner.rs
codex-rs/protocol/src/: config_types.rs  lib.rs  plan_tool.rs  protocol.rs  request_user_input.rs  todo_tool.rs
codex-rs/tui/: Cargo.toml
docs/: contributing.md
scripts/: run-codex-tui-auto-update.sh
(+98 files in other folders)
